k8s/api-store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-store-deployment
  namespace: api-store-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-store
  template:
    metadata:
      labels:
        app: api-store
        version: diploma
    spec:
      containers:
      - name: api-store
        image: europe-west1-docker.pkg.dev/PROJECT_ID/diploma-docker-repo/api-store:latest
        ports:
        - containerPort: 5050
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 5050
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 5050
          initialDelaySeconds: 30
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: api-store-service
  namespace: api-store-prod
spec:
  selector:
    app: api-store
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5050
  type: LoadBalancer
