k8s/api-store-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-store-service
  namespace: api-store
spec:
  type: LoadBalancer
  selector:
    app: api-store
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5050
