k8s/bookshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookshop-service
  namespace: bookshop
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: bookshop
