k8s/tls-certificates.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-store-ingress
  namespace: api-store-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api-diploma-project.duckdns.org
    secretName: api-store-tls
  rules:
  - host: api-diploma-project.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-store-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookshop-ingress
  namespace: bookshop-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - bookshop-diploma-project.duckdns.org
    secretName: bookshop-tls
  rules:
  - host: bookshop-diploma-project.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookshop-service
            port:
              number: 80
